# terminal-rpg

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GAME_SETUP_README.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  quickstart.py  requirements-dev.txt  requirements.txt  test_campaign.py  verify_database.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/terminal-rpg/: main.py
src/terminal-rpg/engines/: game.py  new_campaign.py
src/terminal-rpg/storage/: database.py  models.py  seed.py
src/terminal-rpg/storage/repositories/: __init__.py  campaign.py  location.py  player.py  weapon.py
src/terminal-rpg/ui/: prompts.py
src/terminal_rpg/: main.py
src/terminal_rpg/campaign_presets/: __init__.py  loader.py  models.py  registry.py
src/terminal_rpg/campaign_presets/presets/: __init__.py  _template.py  forgotten_realms.py  iss_horror.py  sword_coast.py
src/terminal_rpg/engines/: combat.py  dice.py  game.py  new_campaign.py  utils.py  xp_utils.py
src/terminal_rpg/llm/: claude_api.py
src/terminal_rpg/llm/combat/: dm_combat.py  dm_combat_npc.py  dm_combat_player.py  generate_battle.py
src/terminal_rpg/llm/combat/prompts/: dm_combat_prompts.py  generate_battle_prompts.py
src/terminal_rpg/llm/combat/tools/: __init__.py  attack_tools.py  generate_battle_tools.py  npc_combat_tools.py  player_combat_tools.py
src/terminal_rpg/llm/game/: dm_game.py  message_history.py  utils.py
src/terminal_rpg/llm/game/prompts/: dm_game_prompts.py
src/terminal_rpg/llm/game/tools/: __init__.py  ability_check_tool.py  ability_check_tools.py  gold_tools.py  hp_tool.py  hp_tools.py  initiate_combat_tools.py  inventory_tool.py  inventory_tools.py  location_tool.py  location_tools.py
src/terminal_rpg/llm/shared/: message_history.py
src/terminal_rpg/storage/: __init__.py  database.py  models.py  seed.py
src/terminal_rpg/storage/repositories/: __init__.py  armor.py  base.py  battle.py  battle_participant.py  campaign.py  campaign_log.py  item.py  location.py  npc.py  player.py  weapon.py  world.py
src/terminal_rpg/ui/: battle_display.py  character_display.py  display.py  game_display.py  menu_display.py  prompts.py
